backend: improved overall security by: - adding sql injection validations - XSS configurations - updating security configuration - improving authorization by allowing the currently logged in user to see their data - adding rate limiting to prevent DOS attacks